################################################################################
# csvpp Header only CSV parsing library                                        #
#                                                                              #
# Copyright (C) 2018 Michele Mei <michele.mei@gmail.com>                       #
#                                                                              #
# csvpp is free software: you can redistribute it and/or modify                #
# it under the terms of the GNU General Public License as published by         #
# the Free Software Foundation, either version 3 of the License, or            #
# (at your option) any later version.                                          #
#                                                                              #
# G2D is distributed in the hope that it will be useful,                       #
# but WITHOUT ANY WARRANTY; without even the implied warranty of               #
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                #
# GNU General Public License for more details.                                 #
#                                                                              #
# You can get a copy of of the GNU General Public License                      #
# at<http://www.gnu.org/licenses/>.                                            #
#                                                                              #
# Author: Michele Mei                                                          #
# E-Mail: michele.mei@gmail.com                                                #
#                                                                              #
################################################################################

# [ HEADER ]
cmake_minimum_required (VERSION 3.9.1)
project (csvpp)

# [ EXAMPLE ]
add_executable(example example.cpp)
